# avrokdb

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  ci.json  deps  qp.json  travis_setup.sh
.github/workflows/: build_linux.yml  build_mac.yml  build_win.yml
clib/: Dockerfile.qp  qp.json
clib/avrokdb/: CMakeLists.txt
clib/avrokdb/src/: Decode.cpp  Decode.h  Encode.cpp  GenericForeign.h  InitialiseKdb.cpp  InitialiseKdb.h  KdbOptions.h  Schema.cpp  Schema.h  TypeCheck.cpp  TypeCheck.h
clib/avrokdb/vs2022/: avrokdb.vcxproj  avrokdb.vcxproj.filters
docs/: introduction.md  reference.md  type-mapping.md
examples/: arrays.avsc  benchmark.q  example.q  logical.avsc  scalars.avsc
q/: avrokdb.q
src/: Decode.cpp  Decode.h  Encode.cpp  Encode.h  HelperFunctions.cpp  HelperFunctions.h  InitialiseKdb.cpp  InitialiseKdb.h  KdbOptions.h  Schema.cpp  Schema.h  TypeCheck.cpp  TypeCheck.h
tests/: array_array_record.avsc  array_array_record_single.avsc  array_record.avsc  array_record_single.avsc  logical_array.avsc  logical_maps.avsc  nested_record.avsc  nested_record_single.avsc  simple.avsc  simple.q  simple_array.avsc  simple_array.q  simple_array_array.avsc  simple_array_map.avsc  simple_map.avsc  simple_map_array.avsc  simple_map_map.avsc  single_array.avsc  single_simple.avsc  test.q  test.t
vs2022/: avrokdb.sln  avrokdb.vcxproj
